minor changes done

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           </li>
 
           <li><a href="#">Emergency Assistance</a></li>
+          <li><a href="#">Hello Test</a></li>
           <li>
             <a href="#">Customer Service <span class="caret">▾</span></a>
           </li>
