logo changed for mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <nav class="nav container">
         <a class="brand" href="#">
-         <img src="./logo.svg" />
+          <img src="./logo.svg" />
         </a>
 
         <!-- Desktop Nav -->
@@ -80,8 +80,9 @@
       <div class="drawer-panel" role="dialog" aria-modal="true">
         <div class="drawer-top">
           <div class="drawer-brand">
-            <span class="brand-mark"></span>
-            <span class="brand-text">logoipsum</span>
+            <a class="brand" href="#">
+              <img src="./logo.svg" />
+            </a>
           </div>
           <button class="drawer-close" id="drawerClose" aria-label="Close menu">
             ✕
