--- a/Page.html
+++ b/Page.html
@@ -13,7 +13,7 @@
   <header class="topbar">
     <div class="topbar-inner">
       <a class="back" href="index.html">← Back</a>
-      <div class="brand">logoipsum<span>®</span></div>
+      <div class="brand"><img src="logo-6.png" alt=""></div>
       <div class="ghost"></div>
     </div>
   </header>
@@ -92,7 +92,7 @@
         <!-- Plan 1 -->
         <article class="plan card">
           <div class="plan-top">
-            <div class="badge navy">V</div>
+            <div ><img src="Background (1).png" alt=""></div>
             <h2>VOYAGER</h2>
             <p class="from">From <s>$17.37</s></p>
             <div class="amount navy">$15<span>.98</span></div>
@@ -109,7 +109,7 @@
         <!-- Plan 2 -->
         <article class="plan card highlight">
           <div class="plan-top">
-            <div class="badge gold">V</div>
+            <div><img src="Background.png" alt=""></div>
             <h2>VOYAGER PLUS</h2>
             <p class="from">From $44.94</p>
             <div class="amount gold">$41<span>.34</span></div>
