--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <header class="header">
       <nav class="nav container">
         <a class="brand" href="#">
-          <img src="./logo.svg" />
+          <img src="logo.svg" class="logo logo-dark" />
+          <img src="logo-6.png" class="logo logo-light" />
         </a>
-
-        <!-- Desktop Nav -->
         <ul class="nav-links desktop">
           <li>
             <button
@@ -44,6 +43,7 @@
         </button>
       </nav>
     </header>
+    <div class="blur-overlay" id="blurOverlay"></div>
 
     <!-- ✅ DESKTOP MEGA MENU (header ke just baad) -->
     <div class="mega" id="mega" aria-hidden="true">
@@ -61,7 +61,13 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
               gravida tincidunt mi, in bibendum sapien pellentesque vitae.
             </p>
-            <button class="mega-cta" type="button">GET A QUOTE</button>
+            <button
+              class="mega-cta"
+              onclick="window.location.href = 'Page.html'"
+              type="button"
+            >
+              GET A QUOTE
+            </button>
           </div>
 
           <div class="mega-right">
@@ -143,8 +149,8 @@
 
           <div class="card">
             <div class="tabs">
-              <button class="tab" type="button">Single Trip</button>
-              <button class="tab active" type="button">Multi Trip</button>
+              <button class="tab"id="singleTrip" type="button">Single Trip</button>
+              <button class="tab active" id="multiTrip"type="button">Multi Trip</button>
             </div>
 
             <form class="form" onsubmit="return false;">
@@ -170,6 +176,39 @@
                   <li data-value="Canada" tabindex="-1">Canada</li>
                   <li data-value="France" tabindex="-1">France</li>
                   <li data-value="Germany" tabindex="-1">Germany</li>
+
+                  <li data-value="Italy" tabindex="-1">Italy</li>
+                  <li data-value="Spain" tabindex="-1">Spain</li>
+                  <li data-value="Switzerland" tabindex="-1">Switzerland</li>
+                  <li data-value="Netherlands" tabindex="-1">Netherlands</li>
+
+                  <li data-value="Belgium" tabindex="-1">Belgium</li>
+                  <li data-value="Greece" tabindex="-1">Greece</li>
+                  <li data-value="Portugal" tabindex="-1">Portugal</li>
+                  <li data-value="India" tabindex="-1">India</li>
+                  <li data-value="Thailand" tabindex="-1">Thailand</li>
+                  <li data-value="Singapore" tabindex="-1">Singapore</li>
+                  <li data-value="Malaysia" tabindex="-1">Malaysia</li>
+                  
+                  <li data-value="Japan" tabindex="-1">Japan</li>
+                  <li data-value="South Korea" tabindex="-1">South Korea</li>
+                  <li data-value="Vietnam" tabindex="-1">Vietnam</li>
+                  <li data-value="Sri Lanka" tabindex="-1">Sri Lanka</li>
+                  <li data-value="United States" tabindex="-1">
+                    United States
+                  </li>
+
+                  <li data-value="Mexico" tabindex="-1">Mexico</li>
+                  <li data-value="Brazil" tabindex="-1">Brazil</li>
+                  <li data-value="Argentina" tabindex="-1">Argentina</li>
+                  <li data-value="Australia" tabindex="-1">Australia</li>
+                  <li data-value="New Zealand" tabindex="-1">New Zealand</li>
+                  <li data-value="United Arab Emirates" tabindex="-1">
+                    United Arab Emirates
+                  </li>
+                  <li data-value="Dubai" tabindex="-1">Dubai</li>
+                  <li data-value="Turkey" tabindex="-1">Turkey</li>
+                  <li data-value="Egypt" tabindex="-1">Egypt</li>
                 </ul>
               </div>
 
@@ -208,7 +247,13 @@
               </div>
 
               <input class="control" type="text" placeholder="Promo Code" />
-              <button class="cta" type="button">GET A QUOTE</button>
+              <button
+                class="cta"
+                onclick="window.location.href = 'Page.html'"
+                type="button"
+              >
+                GET A QUOTE
+              </button>
             </form>
           </div>
         </section>
